all basic functions are done